Added Google Analytics Tag

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <link href="https://www.nerdfonts.com/assets/css/webfont.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="static/css/main.css" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EEXN3H3SBP"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-EEXN3H3SBP');
+    </script>
 </head>
 
 <body>
