Fixed Courses section icon

--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@ Pattern</mark>, KPI reports, <mark>query performance improvement</mark>." data-t
                     </div>
             </section>
             <section id="courses" class="section">
-                <h2 data-text-en="🌐 Courses" data-text-pt="🌐 Cursos">🌐 Cursos</h2>
+                <h2 data-text-en="📒 Courses" data-text-pt="📒 Cursos">📒 Cursos</h2>
                 <h3>Balta.io</h3>
                 <div class="table-container">
                     <table class="table">
