Fixed Livros nav option (was incorrectly typed as "About me)

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <li><a href="#projects" data-text-en="Projects" data-text-pt="Projetos">Projetos</a></li>
                     <li><a href="#courses" data-text-en="Courses" data-text-pt="Cursos">Cursos</a></li>
                     <li><a href="#languages" data-text-en="Languages" data-text-pt="Idiomas">Idiomas</a></li>
-                    <li><a href="#books" data-text-en="Books" data-text-pt="Sobre mim">Livros</a></li>
+                    <li><a href="#books" data-text-en="Books" data-text-pt="Livros">Livros</a></li>
                     <li><a href="#interests" data-text-en="Interests" data-text-pt="Interesses">Interesses</a></li>
                 </ul>
             </nav>
