Keep all skill details open by default

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         <span class="skill"><i class="devicon-docker-plain"></i>Docker compose</span>
                     </div>
                 </details>
-                <details>
+                <details open>
                     <summary>
                         <h3 data-text-en="Tests" data-text-pt="Testes">Testes</h3><svg aria-hidden="true"
                             focusable="false" class="octicon octicon-plus" viewBox="0 0 16 16" width="16" height="16"
@@ -234,7 +234,7 @@
                         <span class="skill">xUnit</span>
                     </div>
                 </details>
-                <details>
+                <details open>
                     <summary>
                         <h3 data-text-en="Architecture" data-text-pt="Arquitetura">Arquitetura</h3><svg
                             aria-hidden="true" focusable="false" class="octicon octicon-plus" viewBox="0 0 16 16"
@@ -253,7 +253,7 @@
                             Architecture</span>
                     </div>
                 </details>
-                <details>
+                <details open>
                     <summary>
                         <h3 data-text-en="Code quality" data-text-pt="Qualidade de código">Qualidade de
                             código</h3><svg aria-hidden="true" focusable="false" class="octicon octicon-plus"
@@ -271,7 +271,7 @@
                         <span class="skill">KISS</span>
                     </div>
                 </details>
-                <details>
+                <details open>
                     <summary>
                         <h3 data-text-en="Agile" data-text-pt="Agile">Agile</h3><svg aria-hidden="true"
                             focusable="false" class="octicon octicon-plus" viewBox="0 0 16 16" width="16" height="16"
@@ -287,7 +287,7 @@
                         <span class="skill">Kanban</span>
                     </div>
                 </details>
-                <details>
+                <details open>
                     <summary>
                         <h3 data-text-en="Other skills" data-text-pt="Outras habilidades">Outras
                             habilidades</h3><svg aria-hidden="true" focusable="false" class="octicon octicon-plus"
