Fixed wrong label + light mode color improvement + minor finegrain adjustments

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                                         em
                                         informática</h2>
                                     <span class="timeline-title-detail"
-                                        data-translate-key="degree_computer_engineering">Nível técnico</span>
+                                        data-translate-key="degree_type_technician">Nível técnico</span>
                                 </div>
                                 <h3 class="timeline-subtitle"><i class="fa-solid fa-fw fa-graduation-cap"></i>
                                     <span>ETEC Philadelpho Gouvêa Netto</span>
