Fixed minor spacing issue

--- a/index.html
+++ b/index.html
@@ -450,14 +450,22 @@
                                     <span>UNORTE - Centro Universitário do Norte de São Paulo</span>
                                 </h3>
                             </div>
-                            <p data-translate-key="education_thesis1">
-                                Programa de iniciação científica: utilização de galvanômetro como componente eletrônico
-                                em harpas laser.
+                            <p>
+                                <strong data-translate-key="education_initiation_program">Programa de iniciação
+                                    científica:</strong>
+                                <span data-translate-key="education_thesis1">
+                                    Programa de iniciação científica: utilização de galvanômetro como componente
+                                    eletrônico
+                                    em harpas laser.</span>
                             </p>
-                            <p data-translate-key="education_thesis2">
-                                Tese: Estudo comparativo do algoritmo de rastreamento de caminho A* versus algoritmo
-                                genético de aprendizado de máquina
-                                na automação de robôs de armazém.</p>
+                            <p>
+                                <strong data-translate-key="education_thesis">Tese:</strong>
+                                <span data-translate-key="education_thesis2">
+                                    Estudo comparativo do algoritmo de rastreamento de caminho A* versus algoritmo
+                                    genético de aprendizado de máquina
+                                    na automação de robôs de armazém.
+                                </span>
+                            </p>
                         </div>
                     </div>
                     <div class="timeline-item">
@@ -475,8 +483,10 @@
                                     <span>ETEC Philadelpho Gouvêa Netto</span>
                                 </h3>
                             </div>
-                            <p data-translate-key="education_thesis3">Tese:
-                                Software empregado em automação de bancas de jornais.</p>
+                            <p><strong data-translate-key="education_thesis">Tese:</strong>
+                                <span data-translate-key="education_thesis3">Software empregado em automação de bancas
+                                    de jornais.</span>
+                            </p>
                         </div>
                     </div>
                 </div>
