Added minor visual tweaks

--- a/index.html
+++ b/index.html
@@ -500,17 +500,17 @@
                         <img class="card-content-img" src="static/img/utilbox/utilbox-logo.png" />
                         <div class="card-title">
                             <h2>Utilbox</h3>
-                        </div>
-                        <div class="badges card-badges">
-                            <div class="badge" data-translate-key="project_opensource">Código aberto
-                            </div>
-                            <div class="badge" data-translate-key="project_mit_license">Licença MIT</div>
+                                <div class="badges card-badges">
+                                    <div class="badge" data-translate-key="project_opensource">Código aberto
+                                    </div>
+                                    <div class="badge" data-translate-key="project_mit_license">Licença MIT</div>
+                                </div>
                         </div>
                         <div class="card-text">
                             <p data-translate-key="project_utilbox_description">
                                 Uma coleção de bibliotecas de utilidades em C# projetadas para simplificar tarefas
                                 comuns de desenvolvimento. Com
-                                pacotes separados para lidar com datas, enums, resultados, strings e paginação, o
+                                pacotes individuais para lidar com datas, enums, resultados, strings e paginação, o
                                 Utilbox é feito para desenvolvedores
                                 que desejam escrever código sem a necessidade de reinventar a roda.
                             </p>
