Added social links section. Fixed DRI mispelling. Added Postgres

--- a/index.html
+++ b/index.html
@@ -71,16 +71,10 @@
                     <li><a href="#languages" data-translate-key="nav_languages">Idiomas</a></li>
                     <li><a href="#books" data-translate-key="nav_books">Livros</a></li>
                     <li><a href="#interests" data-translate-key="nav_interests">Interesses</a></li>
+                    <li><a href="#socials" data-translate-key="nav_socials">Links</a></li>
                 </ul>
             </nav>
             <div class="nav-extras">
-                <!-- <a class="social-icon" href="https://www.linkedin.com/in/rafael-ferreira93" target="_blank"
-                    aria-label="LinkedIn">
-                    <i class="nf nf-fa-linkedin"></i>
-                </a>
-                <a class="social-icon" href="https://github.com/rafaelchampion" target="_blank" aria-label="GitHub">
-                    <i class="nf nf-md-github"></i>
-                </a> -->
                 <button class="toggle-btn" id="theme-toggle" aria-label="Toggle Theme">
                     <img class="img-flag" src="static/img/theme/switch.png">
                 </button>
@@ -169,9 +163,10 @@
                         </svg>
                     </summary>
                     <div class="skills">
-                        <span class="skill"><i class="devicon-microsoftsqlserver-plain"></i> SQL Server</span>
                         <span class="skill"><i class="devicon-mysql-original"></i> MySQL</span>
+                        <span class="skill"><i class="devicon-microsoftsqlserver-plain"></i> SQL Server</span>
                         <span class="skill"><i class="devicon-azuresqldatabase-plain"></i> PL/SQL</span>
+                        <span class="skill"><i class="devicon-postgresql-plain"></i> PosgtgreSQL</span>
                         <span class="skill"><i class="nf nf-md-database_arrow_right center"></i> Stored
                             procedures</span>
                         <span class="skill"><i class="nf nf-md-database_plus center"></i> Triggers</span>
@@ -248,7 +243,7 @@
                     <div class="skills">
                         <span class="skill">Clean Code</span>
                         <span class="skill">Design Patterns</span>
-                        <span class="skill">DRI</span>
+                        <span class="skill">DRY</span>
                         <span class="skill">YAGNI</span>
                         <span class="skill">KISS</span>
                     </div>
@@ -760,6 +755,23 @@
                     de estar em contato com pessoas e diferentes opiniões.
                     Tanto o ambiente pessoal quanto o profissional são compartilhados com outras pessoas e saber
                     entender, respeitar e as vezes absorver outros pontos de vista nos mantém em constante evolução.</p>
+            </section>
+            <section id="socials" class="section">
+                <h1 data-translate-key="socials_title">🌐 Contato e Redes Sociais</h1>
+                <p data-translate-key="socials_intro">Vamos nos conectar!</p>
+                <p data-translate-key="socials_invite">É sempre bom estar em contato com novas pessoas. Tem alguma ideia
+                    de projeto? Quer discutir tecnologia, programação e código? Precisa de um desenvolvedor? Encontre-me
+                    nos links abaixo.</p>
+                <br />
+                <div class="social-links">
+                    <a class="social-icon" href="https://www.linkedin.com/in/rafael-ferreira93" target="_blank"
+                        aria-label="LinkedIn">
+                        <i class="nf nf-fa-linkedin"></i>
+                    </a>
+                    <a class="social-icon" href="https://github.com/rafaelchampion" target="_blank" aria-label="GitHub">
+                        <i class="nf nf-md-github"></i>
+                    </a>
+                </div>
             </section>
         </main>
     </div>
