[WIP] Rewrote carreer section

--- a/index.html
+++ b/index.html
@@ -40,14 +40,21 @@
                 <h1>
                     Rafael Comunhão Ferreira
                 </h1>
+                <p class="role" id="role" data-translate-key="role">
+                    Engenheiro da Computação • Engenheiro de Software Full Stack • Especialista .NET</p>
                 <div>
                     <i class="fa-solid fa-fw fa-location-dot"></i> <span data-translate-key="location">SP
-                        • Brazil</span>
+                        • Brasil</span>
                 </div>
-                <p id="role" data-translate-key="role">
-                    🧑🏻‍🎓Computer Engineer • 🧑🏻‍💻 Full stack Software Engineer • 💜.NET Expert • 💛JavaScript •
-                    ✨Clean code
-                </p>
+                <div class="socials">
+                    <a class="social-icon" href="https://www.linkedin.com/in/rafael-ferreira93" target="_blank"
+                        aria-label="LinkedIn">
+                        <i class="fa-brands fa-linkedin fa-fw"></i>
+                    </a>
+                    <a class="social-icon" href="https://github.com/rafaelchampion" target="_blank" aria-label="GitHub">
+                        <i class="fa-brands fa-github fa-fw"></i>
+                    </a>
+                </div>
             </div>
             <div class="reflection"></div>
         </aside>
@@ -320,21 +327,48 @@
                                     <span data-translate-key="job5_company">Fast Escova Franchising</span>
                                 </h3>
                             </div>
-                            <p data-translate-key="job5_description">
-                                <mark>Líder de planejamento e desenvolvimento</mark> de um sistema de gerenciamento para
-                                uma rede de clínicas de procedimentos estéticos.
-                                Implementação utilizando <mark>arquitetura limpa</mark>, <mark>DDD</mark>, <mark>.NET
-                                    Core</mark>,
-                                <mark>clean code</mark>, criação de <mark>API segura</mark> com endpoints para
-                                integração e comunicação com a franqueadora,
-                                gerenciamento de <mark>identidade de usuários</mark>, gerenciamento de assinaturas de
-                                clientes,
-                                premiação e bonificação de vendedores com extensas regras de competição,
-                                <mark>multi-tenancy</mark>,
-                                agendamento de sessões com gerenciamento de vagas por cadeira e por profissional,
-                                gerenciamento de estoque de produtos para venda direta e consumo de insumos na
-                                realização de procedimentos entre outros.
-                            </p>
+                            <div class="timeline-body">
+                                <ul>
+                                    <li data-translate-key="job5_description_1">
+                                        <mark>Líder de planejamento e desenvolvimento</mark> de um novo sistema de
+                                        gerenciamento para
+                                        uma
+                                        franquia de clínicas de procedimentos estéticos, <mark>simplificando o
+                                            agendamento de
+                                            consultas</mark>, o <mark>gerenciamento de estoque</mark> e a
+                                        <mark>supervisão
+                                            operacional</mark>.
+                                    </li>
+                                    <li data-translate-key="job5_description_2">
+                                        <mark>Projeto de arquitetura do sistema</mark>, <mark>estrutura do banco de
+                                            dados</mark>, usando <mark>arquitetura limpa</mark>, <mark>DDD</mark>,
+                                        <mark>.NET Core</mark> e
+                                        <mark>princípios SOLID</mark>, garantindo <mark>escalabilidade</mark>,
+                                        <mark>manutenibilidade</mark> e
+                                        <mark>segurança</mark> de longo prazo.
+                                    </li>
+                                    <li data-translate-key="job5_description_3">
+                                        <mark>Gestão</mark> uma pequena equipe de desenvolvedores autônomos,
+                                        <mark>delegando tarefas</mark>, <mark>revisando o código</mark> e
+                                        <mark>garantindo a adesão
+                                            às melhores práticas</mark> e objetivos de negócios.
+                                    </li>
+                                    <li data-translate-key="job5_description_4">
+                                        Desenvolvimento de <mark>APIs seguras</mark> para <mark>sincronização de dados
+                                            em tempo real</mark> entre
+                                        várias clínicas e o franqueador, <mark>simplificando os
+                                            processos de negócios</mark> e <mark>centralizando o gerenciamento de
+                                            dados</mark>.
+                                    </li>
+                                    <li data-translate-key="job5_description_5">
+                                        Desenvolvimento de um <mark>robusto sistema de estoque</mark> e insumos para
+                                        venda de produtos e controle de
+                                        estoque de insumos de produtos
+                                        utilizados nos procedimentos, <mark>melhorando a visão do estoque</mark> e
+                                        <mark>diminuindo gastos</mark>.
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
 
@@ -348,19 +382,43 @@
                                     <span data-translate-key="job4_company">MedicMais Franchising</span>
                                 </h3>
                             </div>
-                            <p data-translate-key="job4_description">
-                                <mark>Líder de planejamento e desenvolvimento</mark> de um sistema de gerenciamento para
-                                uma rede de planos de saúde com clínicas próprias.
-                                Implementação utilizando <mark>ASP.NET Webforms</mark>, <mark>Repository Pattern</mark>,
-                                <mark>DevExpress</mark>, <mark>clean code</mark>, notificações com <mark>SignalR</mark>,
-                                criação de <mark>API segura</mark> com endpoints para integração e comunicação com a
-                                franqueadora,
-                                <mark>CRM para gestão de leads e clientes</mark>, registro e armazenamento seguro de
-                                <mark>prontuários médicos</mark>,
-                                <mark>componente interativo de procedimentos odontológicos</mark>, <mark>agenda
-                                    médica</mark>
-                                multivisão com interações na própria agenda.
-                            </p>
+                            <div class="timeline-body">
+                                <ul>
+                                    <li data-translate-key="job4_description_1">
+                                        Líder de planejamento e desenvolvimento de um novo sistema de gerenciamento para
+                                        uma
+                                        franquia de planos
+                                        de saúde, automatizando
+                                        operações clínicas, gerenciamento de registros médicos e agendamento de
+                                        consultas.
+                                    </li>
+                                    <li data-translate-key="job4_description_2">
+                                        Projeto de arquitetura do sistema, estrutura de banco de dados, decisão de
+                                        tecnologias
+                                        escolhidas e stack do projeto.
+                                    </li>
+                                    <li data-translate-key="job4_description_3">
+                                        Desenvolvimento de uma agenda médica interativa multivisualização com
+                                        sincronização em
+                                        tempo real, melhorando significativamente a eficiência do agendamento e a
+                                        coordenação da
+                                        equipe médica.
+                                    </li>
+                                    <li data-translate-key="job4_description_4">
+                                        Gestão de uma pequena equipe de desenvolvedores autônomos, supervisionando os
+                                        esforços
+                                        de desenvolvimento e garantindo a
+                                        entrega de soluções de software escaláveis ​​e de alta qualidade.
+                                    </li>
+                                    <li data-translate-key="job4_description_5">
+                                        Implementação das melhores práticas de segurança, incluindo armazenamento seguro
+                                        de
+                                        dados e integrações seguras de API, garantindo a conformidade com os
+                                        regulamentos de
+                                        saúde.
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
 
@@ -374,13 +432,33 @@
                                     <span data-translate-key="job3_company">Instituto da Construção</span>
                                 </h3>
                             </div>
-                            <p data-translate-key="job3_description">
-                                Manutenção e desenvolvimento de novas funcionalidades em software de gestão em rede de
-                                escolas com cursos na área da construção civil. <mark>ASP.NET WebForms</mark>,
-                                <mark>MySQL</mark>, <mark>Entity Framework</mark>, <mark>Repository Pattern</mark>,
-                                <mark>UnitOfWork Pattern</mark>, relatórios de KPIs, <mark>melhoria de performance de
-                                    consultas</mark>.
-                            </p>
+                            <div class="timeline-body">
+                                <ul>
+                                    <li data-translate-key="job3_description_1">
+                                        Responsável pela melhoria de um sistema de gestão para uma franquia
+                                        de escolas com cursos na área da construção civil, melhorando os fluxos de
+                                        trabalho
+                                        operacionais, acelerando processos e
+                                        aumentando a adesão aos cursos.
+                                    </li>
+                                    <li data-translate-key="job3_description_2">
+                                        Otimização de consultas e relatórios de banco de dados para melhorar o
+                                        desempenho do
+                                        sistema, reduzindo o tempo de execução
+                                        de consultas e melhorando a eficiência de obtenção de dados de relatórios.
+                                    </li>
+                                    <li data-translate-key="job3_description_3">
+                                        Integração com gateways de pagamento para operações de pinpad - um método de
+                                        pagamento
+                                        mais adotado pelo público-alvo - aumentando as vendas.
+                                    </li>
+                                    <li data-translate-key="job3_description_4">
+                                        Otimização de processo de agendamento por turmas para controle de aulas, salas,
+                                        professores e alunos, evitando colisão de
+                                        horários e melhorando a disponibilidade de datas e horários.
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
 
@@ -394,18 +472,27 @@
                                     <span data-translate-key="job2_company">Resolve Franchising</span>
                                 </h3>
                             </div>
-                            <p data-translate-key="job2_description">
-                                Prestação de suporte a usuários e franqueados na utilização de softwares de gestão de 3
-                                marcas: Dr. Resolve (serviços de manutenção para casa), Dona Resolve (serviços de
-                                limpeza)
-                                e Instituto da Construção (rede de escolas de ensino com cursos na área da construção
-                                civil).
-                                Suporte ao usuário, apresentação de treinamentos de utilização dos sistemas, suportes
-                                nível 1 e 2,
-                                consultas em banco MySQL, análise de solicitações, levantamento de requisitos, auxílio
-                                aos desenvolvedores
-                                realizando a intermediação entre as solicitações e a linguagem técnica.
-                            </p>
+                            <div class="timeline-body">
+                                <ul>
+                                    <li data-translate-key="job2_description_1">
+                                        Suporte técnico e treinamento para usuários e franqueados em três marcas de
+                                        franquia,
+                                        aumentando a adoção dos usuários à
+                                        usabilidade do sistema e prevenindo problemas de operação.
+                                    </li>
+                                    <li data-translate-key="job2_description_2">
+                                        Consultas de banco de dados e análise de anolamias para resolver problemas do
+                                        sistema,
+                                        atuando como ponte entre usuários
+                                        finais e desenvolvedores para aprimoramentos de recursos de sistema.
+                                    </li>
+                                    <li data-translate-key="job2_description_3">
+                                        Composição de documentação para sistemas existentes e novos recursos, mantendo a
+                                        operação atualizada com mudanças e
+                                        melhorias.
+                                    </li>
+                            </div>
+                            </ul>
                         </div>
                     </div>
 
